fix bug 1005977 - Prevent obvious content overlap

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -168,6 +168,7 @@ enable-toc-toggle() {
 /* wiki article display */
 article {
   position: relative;
+  overflow-x: auto;
 
   .external-icon:not([href^='https://mdn.mozillademos.org']) {
     white-space: pre-line;
